# benchmark

./: .env.sample  .gitignore  LICENSE  README.md  benchmark.csv  mypy.ini  predictions.csv  pyproject.toml  references.csv  tox.ini
evaluations/: BaseClassifier.py  README.template.md
evaluations/anthropic-claude-4-sonnet/: README.md  about.yaml  accuracies.csv  anthropic-claude-4-sonnet.py  results.csv  stats.csv
evaluations/aurora-sdg/: README.md  about.yaml  accuracies.csv  aurora-sdg.py  results.csv  stats.csv
evaluations/deepseek-v3/: README.md  about.yaml  accuracies.csv  deepseek-v3.py  results.csv  stats.csv
evaluations/gemini-25-flash/: README.md  about.yaml  accuracies.csv  gemini-25-flash.py  results.csv  stats.csv
evaluations/global-goals-directory/: README.md  about.yaml  accuracies.csv  global-goals-directory.py  predictions.csv  results.csv  stats.csv
evaluations/llama-2/: README.md  about.yaml  accuracies.csv  llama-2.py  results.csv  stats.csv
evaluations/llama-3/: README.md  about.yaml  accuracies.csv  llama-3.py  results.csv  stats.csv
evaluations/mixtral-8x7b/: README.md  about.yaml  accuracies.csv  mixtral-8x7b.py  results.csv  stats.csv
evaluations/openai-gpt-3/: README.md  about.yaml  accuracies.csv  openai-gpt-3.py  results.csv  stats.csv
evaluations/openai-gpt-4/: README.md  about.yaml  accuracies.csv  openai-gpt-4.py  results.csv  stats.csv
evaluations/openai-gpt-4o/: README.md  about.yaml  accuracies.csv  openai-gpt-4o.py  results.csv  stats.csv
evaluations/osdg/: README.md  about.yaml  accuracies.csv  osdg.py  results.csv  stats.csv
evaluations/sdg-mapper/: README.md  about.yaml  accuracies.csv  results.csv  sdg-mapper.py  stats.csv
evaluations/sdg-prospector/: README.md  about.yaml  accuracies.csv  predictions.csv  results.csv  sdg-prospector.py  stats.csv
evaluations/text2sdg/: Dockerfile  README.md  about.yaml  accuracies.csv  classify.R  predictions.csv  results.csv  stats.csv  text2sdg.py
examples/: llama-with-replicate-api.py  openai-gpt-api.py  sdg-mapper-api.py  with-pandas.py
scripts/: build.py  evaluate.py  update_readme.py  validate.py
src/sdgclassification/benchmark/: Benchmark.py  Metrics.py  Result.py  ResultSet.py  Stats.py  __init__.py  load_benchmark_df.py
tests/: Benchmark_test.py  Metrics_test.py  ResultSet_test.py  Result_test.py  Stats_test.py  benchmark_csv_test.py  conftest.py  load_benchmark_df_test.py  tox_test.py
tests/snapshots/Benchmark_test/it_prints_stats_table/: benchmark_out.txt
tests/snapshots/Stats_test/it_only_includes_metrics_with_at_least_one_text/: stats-table-selected.txt
tests/snapshots/Stats_test/it_returns_stats_as_table/: stats-table-full.txt
tests/snapshots/Stats_test/it_supports_different_precision_levels/: stats-table-precise.txt
