[tool.poetry]
name = "benchmarking-dataset"
version = "0.0.0"
description = "The SDG Classification Benchmarking Dataset is an open and public resource for evaluating and comparing SDG classification models."
authors = ["Finn Woelm <finn@globalgoals.directory>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"
black = "^24.2.0"
tabulate = "^0.9.0"
scikit-learn = "^1.4.1.post1"
mypy = "^1.9.0"
pandas-stubs = "^2.2.0.240218"
types-tabulate = "^0.9.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
